[package]
name = "video-test"
version = "0.1.0"
edition = "2021"
repository = "git@acs-ultron:aiot/video_player.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["advanced", "image", "lazy", "wgpu", "tokio"] }
iced_wgpu = { git = "https://github.com/iced-rs/iced" }

gstreamer = "0.22" 
gstreamer-app = "0.22" # appsink 
glib = "0.19" # gobject traits and error type
thiserror = "1" 
url = "2" # media uri
vanilla_iced = { git="https://github.com/skygrango/vanilla-iced.git" } 
num-rational = "0.4.1"
